# semanticscholar

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py  test-requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml  test.yml
docs/source/: conf.py  install.rst
nix/: formatter.nix  packages.nix  shell.nix
semanticscholar/: ApiRequester.py  AsyncSemanticScholar.py  Author.py  Autocomplete.py  BaseReference.py  Citation.py  Dataset.py  DatasetDiff.py  Journal.py  PaginatedResults.py  Paper.py  PublicationVenue.py  Reference.py  Release.py  SemanticScholar.py  SemanticScholarException.py  SemanticScholarObject.py  SnippetSearchResult.py  Tldr.py  __init__.py  mcp_server.py
tests/: test_mcp_server.py  test_semanticscholar.py
tests/data/: SnippetSearchResult.json  test_search_paper_bulk_retrieval.yaml  test_search_paper_bulk_retrieval_async.yaml  test_search_paper_bulk_retrieval_next_page.yaml  test_search_paper_bulk_retrieval_next_page_async.yaml  test_search_paper_bulk_retrieval_sorted_results_asc.yaml  test_search_paper_bulk_retrieval_sorted_results_asc_async.yaml  test_search_paper_bulk_retrieval_sorted_results_default_order.yaml  test_search_paper_bulk_retrieval_sorted_results_default_order_async.yaml  test_search_paper_bulk_retrieval_sorted_results_desc.yaml  test_search_paper_bulk_retrieval_sorted_results_desc_async.yaml  test_search_paper_bulk_retrieval_traversing_results.yaml  test_search_paper_bulk_retrieval_traversing_results_async.yaml  test_search_snippet.yaml  test_search_snippet_async.yaml
