[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticscholar"
version = "0.11.0"
description = "Unofficial Python client library for Semantic Scholar APIs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Silva", email = "danielnsilva@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx",
    "nest-asyncio",
    "tenacity",
]

[project.urls]
Homepage = "http://danielnsilva.com/semanticscholar"

[project.optional-dependencies]
test = ["vcrpy>=8.0"]
